kubernetes/cka/problemaReal/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nginx
        volumeMounts:
        - name: backend-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: backend-config
        configMap:
          name: backend-config
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: prod
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
